--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest  # 使用 GitHub 的 Ubuntu 虚拟机
+    defaults:
+      run:
+        working-directory: ./vitepress  # 关键修改点
 
     steps:
       # 步骤1：检出代码
