--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,11 @@ jobs:
         run: pnpm run docs:build  # 生成静态文件到 docs/.vitepress/dist
 
       # 步骤5：部署到 gh-pages 分支
-      - uses: peaceiris/actions-gh-pages@v3
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}  # 自动鉴权
           publish_dir: ./docs/.vitepress/dist  # 部署的目录
           keep_files: false  # 清空 gh-pages 分支原有文件
           force_orphan: true  # 强制清空历史记录
-          destination_branch: gh-pages  # 显式指定目标分支
+          publish_branch: gh-pages
